# uroboro

./: .gitignore  LICENSE  README.md  UroboroP.cabal
exec/: Main.hs
samples/: ab.uro  fib.uro  list.uro  multipleargs.uro  num.uro  test.uro  tree2.uro  typeError.uro
samples/lib/: bool.uro  conat.uro  function.uro  list.uro  nat.uro  stream.uro  tree.uro
src/Uroboro/: Checker.hs  Error.hs  ExternalSyntax.hs  FillRules.hs  FillSigma.hs  InternalSyntax.hs  Interpreter.hs  Location.hs  Parser.hs  PrettyPrinter.hs  PrettyPrinterEST.hs  Token.hs  TransformExtToInt.hs
test/: SpecHelper.hs  Utils.hs
test/Uroboro/: CheckerSpec.hs  ParserSpec.hs  TokenSpec.hs
